<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pictureCardBack"
    android:layout_width="match_parent"
    android:layout_height="@dimen/cardview_height"
    cardview:cardCornerRadius="@dimen/cardview_corner"
    android:layout_marginBottom="@dimen/margin_button_cardview"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/pictureCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            android:background="@drawable/cervecerias_artesanales"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_vertical_card"
            android:paddingBottom="@dimen/padding_vertical_card"
            android:background="@color/backgroundtext_card"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usernamecard"
                android:textColor="@color/editTextColorWhite"
                android:textSize="@dimen/textsize_cardview" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/firstword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstwordday"
                    android:textColor="@color/editTextColorWhite"
                    android:textSize="@dimen/textsizefirstword" />

                <TextView
                    android:id="@+id/timeCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/marginfirstword"
                    android:text="@string/textday_firstword"
                    android:textColor="@color/editTextColorWhite"
                    android:textSize="@dimen/textsizefirstword"
                />

            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/like_margintop_card"
                    android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/likeCheckCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector" />

                    <TextView
                        android:id="@+id/likeNumberCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/timecard_marginleftcard"
                        android:text="@string/likenumber_card"
                        android:textColor="@color/editTextColorWhite"
                        android:textSize="@dimen/firsword_textsize" />

                </LinearLayout>


            </LinearLayout>













    </FrameLayout>



</android.support.v7.widget.CardView>